feat(sync): add client device revocation
